@@ -93,7 +93,7 @@ public class HttpSessionContextImpl extends SessionContext implements IHttpSessi
                   }       //PK19389 when another thread is in sessionPostInvoke, trying to lock linkedlist in order to notify the thread in lock.wait()
                   if (com.ibm.ejs.ras.TraceComponent.isAnyTracingEnabled()&&LoggingUtil.SESSION_LOGGER_CORE.isLoggable(Level.FINE)) {
                       LoggingUtil.SESSION_LOGGER_CORE.logp(Level.FINE, methodClassName, methodNames[LOCK_SESSION], 
-                      "size = " + llsize + " thread = " + Thread.currentThread().getId() + " lock = " + lock.hashCode());
+                      "size = " + llsize + " thread = " + Thread.currentThread().threadId() + " lock = " + lock.hashCode());
                   }                  
                   if (llsize > 1) {
                       long before = System.nanoTime();
